--- a/secrets.env
+++ b/secrets.env
@@ -12,8 +12,8 @@ DATABASE_PORT=5432
 POSTGRES_DB=chris
 POSTGRES_USER=chris
 POSTGRES_PASSWORD=chris1234
-CHRIS_STORE_URL=https://chrisstore.co/api/v1/
-STORAGE_ENV=filesystem
+CHRIS_STORE_URL=https://cube.chrisproject.org/api/v1/
+STORAGE_ENV=fslink
 MEDIA_ROOT=/data
 CELERY_BROKER_URL=amqp://queue:5672
 NATS_ADDRESS=nats://nats:4222
