--- a/secrets.env
+++ b/secrets.env
@@ -16,5 +16,7 @@ CHRIS_STORE_URL=https://cube.chrisproject.org/api/v1/
 STORAGE_ENV=fslink
 MEDIA_ROOT=/data
 CELERY_BROKER_URL=amqp://queue:5672
+PFDCM_ADDRESS=http://pfdcm:4005
 NATS_ADDRESS=nats://nats:4222
 AUTH_LDAP=False
+DISABLE_USER_ACCOUNT_CREATION=false
