--- a/secrets.env
+++ b/secrets.env
@@ -7,6 +7,7 @@ DJANGO_CORS_ALLOW_ALL_ORIGINS=true
 DJANGO_CORS_ALLOWED_ORIGINS=https://babymri.org
 DJANGO_SECURE_PROXY_SSL_HEADER=
 DJANGO_USE_X_FORWARDED_HOST=false
+DATABASE_CONN_POOL=false
 DATABASE_HOST=db
 DATABASE_PORT=5432
 POSTGRES_DB=chris
