--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - local
 
   db_migrate:
-    image: ghcr.io/fnndsc/cube:6.3.1
+    image: ghcr.io/fnndsc/cube:6.3.2
     command: python manage.py migrate --noinput
     env_file: secrets.env
     volumes:
@@ -30,7 +30,7 @@ services:
 
   chris:
     container_name: chris
-    image: ghcr.io/fnndsc/cube:6.3.1
+    image: ghcr.io/fnndsc/cube:6.3.2
     ports:
       - "8000:8000"
     volumes:
@@ -49,7 +49,7 @@ services:
       org.chrisproject.role: "ChRIS_ultron_backEnd"
       org.chrisproject.miniChRIS: "miniChRIS"
   worker:
-    image: ghcr.io/fnndsc/cube:6.3.1
+    image: ghcr.io/fnndsc/cube:6.3.2
     command: celery -A core worker -c 4 -l info -Q main1,main2
     volumes:
       - chris_files:/data:rw
@@ -67,7 +67,7 @@ services:
     networks:
       - local
   worker_periodic:
-    image: ghcr.io/fnndsc/cube:6.3.1
+    image: ghcr.io/fnndsc/cube:6.3.2
     command: celery -A core worker -c 2 -l info -Q periodic
     volumes:
       - chris_files:/data:rw
@@ -83,7 +83,7 @@ services:
     networks:
       - local
   scheduler:
-    image: ghcr.io/fnndsc/cube:6.3.1
+    image: ghcr.io/fnndsc/cube:6.3.2
     command: celery -A core beat -l info --scheduler django_celery_beat.schedulers:DatabaseScheduler
     volumes:
       - chris_files:/data:rw
@@ -99,7 +99,7 @@ services:
     networks:
       - local
   db:
-    image: docker.io/library/postgres:16
+    image: docker.io/library/postgres:17
     env_file: secrets.env
     restart: unless-stopped
     volumes:
@@ -267,7 +267,7 @@ services:
         condition: service_completed_successfully
 
   nats:
-    image: docker.io/library/nats:2.10.20-alpine3.20
+    image: docker.io/library/nats:2.11.4
     ports:
       - "4222:4222"
     networks:
